# Customer-Churn-Prediction-API

./: README.md  metrics.pkl  pipeline.pkl  pyproject.toml
app/: app.py  schemas.py
data/: data.csv
training/: training_model.py
